--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,49 @@
-.container{
-    width: 100%;
-    height: 100%;
-}
-
-.main{
-    padding: 5% 5%;
+ 
+.mainbody {
+    width: 100vw;
     height: 100vh;
-    background: url(../images/weather-bg.jpg) no-repeat;
     background-size: cover;
-    background-color: rgba(63, 64, 131, 0.356);   
-    background-blend-mode: overlay;
-    color: white;
-}
-.location-result{
-    padding:10% 40%;
-}
-
-@media (max-width:500px) {
-    .main{
-        padding: 20% 5%;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(
+        rgba(206, 54, 8, 0.404),
+        rgba(3, 1, 14, 0.753)
+      ),
+      url(../images/weather-bg.jpg);
+  }
+  
+  input {
+    max-width: 70%;
+    border: none;
+    border-radius: 5px;
+  }
+  .change-location {
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .detail {
+    padding-top: 20%;
+    width: 500px;
+    justify-content: flex-end;
+  }
+  .weather-detail {
+    justify-content: center;
+    align-items: flex-end;
+  }
+  
+  @media screen and (max-width: 500px) {
+    .weather-detail {
+      flex-direction: column;
+      justify-content: center;
     }
-    .location-result{
-        padding:20% 10%;
+    .detail {
+      padding-top: 30%;
     }
-}
+    .weather-detail {
+      flex-direction: column;
+      padding-top: 30%;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+  }
+  
